list of articles update 1340

--- a/pages/sample/list-of-articles-or-content-sample.html
+++ b/pages/sample/list-of-articles-or-content-sample.html
@@ -1,5 +1,5 @@
 ---
-title: Sample - List of articles or content
+title: Sample - List of articles
 landing: Patterns
 layout: sample-site-news.njk
 permalink: "/patterns/list-of-articles-or-content-sample.html"
@@ -17,7 +17,7 @@ permalink: "/patterns/list-of-articles-or-content-sample.html"
         Newsroom
       </a>
     </li>
-    <li class="active">List of articles or content</li>
+    <li class="active">List of articles</li>
   </ol>
 </nav>
 
