--- a/pages/sample/list-of-articles-or-content.html
+++ b/pages/sample/list-of-articles-or-content.html
@@ -1,16 +1,16 @@
 ---
-title: List of articles or content
+title: List of articles
 landing: Patterns
 layout: patterns.njk
 permalink: "/patterns/list-of-articles-or-content.html"
 ---
 
-<h1 class="mt-lg-0 mb-0">List of articles or content</h1>
+<h1 class="mt-lg-0 mb-0">List of articles</h1>
 <p class="subtitle">Other names: News list, report list</p>
 
 <nav class="page-navigation"></nav>
 
-<p>This is a list of articles or content that are published regularly.</p>
+<p>This is a list of articles that are published regularly.</p>
 <p>Common list topics includes:</p>
 <ul>
   <li>News releases</li>
