Add pattern and component content updates

--- a/pages/components.html
+++ b/pages/components.html
@@ -131,6 +131,25 @@ permalink: "components.html"
   </a>
  </div>
  <div class="col-md-4 m-t-md">
+    <a
+      href="/components/executive-profile.html"
+      class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
+      title="Executive profile component example">
+      <div class="p-a-md d-flex align-content-center">
+        <img
+          src="/images/components/icon-executive-profile.png"
+          alt="Executive profile component"
+          class="img-fluid" />
+      </div>
+      <div class="p-a">
+        <h3 class="h5 m-t-0">Executive profile</h3>
+        <p class="font-size-16 color-black">
+          Displays a profile image with content.
+        </p>
+      </div>
+    </a>
+</div>
+ <div class="col-md-4 m-t-md">
   <a href="/components/horizontal-separator.html"
    class="no-underline d-block color-gray-dark brd-gray-light brd-solid-1 rounded-5 h-100 transition-0_3 shadow2-hover color-primary color-primary-hover"
    title="Horizontal separator component example">
