Fading color theme circles

--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -273,6 +273,7 @@ permalink: "visual-design/color/"
   .palette-disc {
    width: 134px;
    height: 134px;
+   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
   }
 
   .insertColorPrimaryHex,
