REmoved settings section #1388

--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -20,7 +20,6 @@ permalink: "structure/utility-header.html"
             Utility header
           </a>
         </li>
-        <li><a href="/structure/settings.html">Settings</a></li>
         <li><a href="/structure/site-header.html">Site header</a></li>
         <li><a href="/structure/mobile-controls.html">Mobile controls</a></li>
         <li><a href="/structure/search.html">Search</a></li>
@@ -50,7 +49,6 @@ permalink: "structure/utility-header.html"
         The text “Official website of the State of California” (on desktop) or
         “State of California” (on mobile)
       </li>
-      <li>Site-wide settings</li>
     </ul>
 
     <h2>Sample</h2>
@@ -155,8 +153,7 @@ permalink: "structure/utility-header.html"
             <p class="m-b">
               Add this
               <code>njk</code>
-              include code above the Site Header, Settings and all other
-              content:
+              include code above the Site Header and all other content:
             </p>
             <pre><code>&#123;% include "src/_includes/utility-header.njk" %&#125;</code></pre>
 
