--- a/pages/sample/structure-site-header.html
+++ b/pages/sample/structure-site-header.html
@@ -16,7 +16,6 @@ permalink: "structure/site-header.html"
           </a>
         </li>
         <li><a href="/structure/utility-header.html">Utility header</a></li>
-        <li><a href="/structure/settings.html">Settings</a></li>
         <li>
           <a href="/structure/site-header.html" class="active">Site header</a>
         </li>
@@ -163,8 +162,7 @@ permalink: "structure/site-header.html"
           <div class="p-a-sm">
             <h3 class="h4 m-t-0">Include path</h3>
             <p class="m-b">
-              Add Settings Bar
-              <code>njk</code>
+              Add <code>site-header.njk</code>
               include code right after Utility Header component:
             </p>
             <pre><code>&#123;% include "src/_includes/site-header.njk" %&#125;</code></pre>
