added grayscale colors to the color page #1392

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -84,6 +84,110 @@ permalink: "visual-design/color.html"
     </p>
 
     <div id="theme-palettes" class="mt-5"></div>
+
+    <h3>Grayscale</h3>
+    <div class="row">
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div
+            class="bg-white-color rounded-50x palette-disc m-x-a brd-solid-1 brd-gray-200 mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .color-white<br />.bg-white<br />#ffffff
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-50 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-50<br />.bg-gray-50<br />#fafafa
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-100 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-100<br />.bg-gray-100<br />#ededef
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-200 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-200<br />.bg-gray-200<br />#d4d4d7
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-300 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-300<br />.bg-gray-300<br />#bcbbc1
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-400 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-400<br />.bg-gray-400<br />#a4a3ab
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row m-t">
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-500 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-500<br />.bg-gray-500<br />#898891
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-600 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-600<br />.bg-gray-600<br />#72717c
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-700 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-700<br />.bg-gray-700<br />#5e5e6a
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-800 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-800<br />.bg-gray-800<br />#4a4958
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-gray-900 rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .gray-900<br />.bg-gray-900<br />#3b3a48
+          </p>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="text-center p-t-3">
+          <div class="bg-black rounded-50x palette-disc  mx-auto"></div>
+          <p class="font-size-sm m-t-sm">
+            .color-black<br />.bg-black<br />#000000
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
