--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -6,7 +6,7 @@ permalink: "download-and-setup.html"
 ---
 
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-lg-3">
     <nav
       aria-labelledby="side-navigation-label"
       class="side-navigation sticky-6 overflow-auto">
@@ -41,7 +41,7 @@ permalink: "download-and-setup.html"
     </nav>
   </div>
 
-  <div class="col-md-9 p-b-lg">
+  <div class="col-lg-9 p-b-lg">
     <h1 id="Downloadandsetup" class="mt-lg-0">Download and setup</h1>
 
     <nav class="page-navigation"></nav>
