--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -18,7 +18,7 @@ permalink: "visual-design/color/"
     </ol>
   </nav>
   <div class="row">
-    <div class="col-md-3" role="complementary">
+    <div class="col-lg-3" role="complementary">
       <!-- Side navigation -->
       <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
         <ul class="list-navigation">
@@ -50,7 +50,7 @@ permalink: "visual-design/color/"
         </ul>
       </nav>
     </div>
-    <div class="col-md-9">
+    <div class="col-lg-9">
       <h1 class="mt-lg-0"><span class="insertThemeName"></span></h1>
 
       <div class="insertAltText sr-only"></div>
