--- a/pages/sample/css-classes-shortcuts.html
+++ b/pages/sample/css-classes-shortcuts.html
@@ -6,7 +6,7 @@ permalink: "get-started/css-classes-shortcuts/"
 ---
 
 <div class="row">
-  <div class="col-md-3" role="complementary">
+  <div class="col-lg-3" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -58,7 +58,7 @@ permalink: "get-started/css-classes-shortcuts/"
       </ul>
     </nav>
   </div>
-  <div class="col-md-9 m-b-lg">
+  <div class="col-lg-9 m-b-lg">
     <h1 class="mt-lg-0">CSS classes shortcuts</h1>
     <p>
       The State Web Template uses CSS classes to display a consistent look and
