--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -6,7 +6,7 @@ permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
 ---
 
 <div class="row">
-  <div class="col-md-3" role="complementary">
+  <div class="col-lg-3" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -43,7 +43,7 @@ permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
     </nav>
   </div>
 
-  <div class="col-md-9 p-b-lg">
+  <div class="col-lg-9 p-b-lg">
     <h1 class="mt-lg-0">Text accent colors</h1>
 
     <nav class="page-navigation"></nav>
