--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -6,7 +6,7 @@ permalink: "/get-started/implementation-steps.html"
 ---
 
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-lg-3">
     <nav
       aria-labelledby="side-navigation-label"
       class="side-navigation sticky-6 overflow-auto">
@@ -29,7 +29,7 @@ permalink: "/get-started/implementation-steps.html"
     </nav>
   </div>
 
-  <div class="col-md-9 p-b-lg">
+  <div class="col-lg-9 p-b-lg">
     <h1 id="Downloadandsetup" class="mt-lg-0">Implementation steps</h1>
 
     <p>Follow these steps to upgrade to the latest template.</p>
