--- a/pages/sample/navigation-icons.html
+++ b/pages/sample/navigation-icons.html
@@ -7,7 +7,7 @@ navigation: "../modules/nav-icons.html"
 ---
 
 <div class="row">
-  <div class="col-md-3" role="complementary">
+  <div class="col-lg-3" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -25,7 +25,7 @@ navigation: "../modules/nav-icons.html"
       </ul>
     </nav>
   </div>
-  <div class="col-md-9 m-b-lg">
+  <div class="col-lg-9 m-b-lg">
     <h1 class="mt-lg-0">Icon menu</h1>
     <p>
       Navigation with icons usually appears to the right of the site logo. It
