--- a/pages/sample/structure-footer.html
+++ b/pages/sample/structure-footer.html
@@ -6,7 +6,7 @@ permalink: "structure/footer.html"
 ---
 
 <div class="row">
-  <div class="col-md-3" role="complementary">
+  <div class="col-lg-3" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -24,7 +24,7 @@ permalink: "structure/footer.html"
       </ul>
     </nav>
   </div>
-  <div class="col-md-9 m-b-lg">
+  <div class="col-lg-9 m-b-lg">
     <h1 class="mt-lg-0">Footer</h1>
     <nav class="page-navigation"></nav>
     <p>
