--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -6,7 +6,7 @@ permalink: "structure/mobile-controls.html"
 ---
 
 <div class="row">
-  <div class="col-md-3" role="complementary">
+  <div class="col-lg-3" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -28,7 +28,7 @@ permalink: "structure/mobile-controls.html"
       </ul>
     </nav>
   </div>
-  <div class="col-md-9 m-b-lg">
+  <div class="col-lg-9 m-b-lg">
     <h1 class="mt-lg-0">Mobile controls</h1>
 
     <nav class="page-navigation"></nav>
