--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -6,7 +6,7 @@ permalink: "structure/site-navigation.html"
 ---
 
 <div class="row">
-  <div class="col-md-3" role="complementary">
+  <div class="col-lg-3" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -29,7 +29,7 @@ permalink: "structure/site-navigation.html"
     </nav>
   </div>
 
-  <div class="col-md-9 p-b-lg">
+  <div class="col-lg-9 p-b-lg">
     <h1 class="mt-lg-0">Site navigation</h1>
 
     <nav class="page-navigation"></nav>
