--- a/pages/structure.html
+++ b/pages/structure.html
@@ -6,7 +6,7 @@ permalink: "structure.html"
 ---
 
 <div class="row">
-  <div class="col-md-3" role="complementary">
+  <div class="col-lg-3" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -25,7 +25,7 @@ permalink: "structure.html"
       </ul>
     </nav>
   </div>
-  <div class="col-md-9 p-b-lg">
+  <div class="col-lg-9 p-b-lg">
     <h1 class="mt-lg-0">Structure</h1>
 
     <nav class="page-navigation"></nav>
