Added Visual Design button title to visual design section pages

--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -240,6 +240,11 @@ permalink: "visual-design/icons.html"
       class="side-navigation sticky-6 overflow-auto">
       <span class="sr-only" id="side-navigation-label">Side navigation</span>
       <ul class="list-navigation">
+        <li>
+          <a href="javascript:;" aria-hidden="true" class="d-none"
+            >Visual design</a
+          >
+        </li>
         <li><a href="/visual-design/color.html">Colors</a></li>
         <li><a href="/visual-design/icons.html" class="active">Icons</a></li>
         <li><a href="/visual-design/typography.html">Typography</a></li>
