--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -10,6 +10,11 @@ permalink: "visual-design/typography.html"
     <!-- Side navigation -->
     <nav aria-label="Side navigation" class="side-navigation sticky-6">
       <ul class="list-navigation">
+        <li>
+          <a href="javascript:;" aria-hidden="true" class="d-none"
+            >Visual design</a
+          >
+        </li>
         <li><a href="/visual-design/color.html">Colors</a></li>
         <li><a href="/visual-design/icons.html">Icons</a></li>
         <li>
