--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -11,6 +11,11 @@ permalink: "visual-design/color.html"
     <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
         <li>
+          <a href="javascript:;" aria-hidden="true" class="d-none"
+            >Visual design</a
+          >
+        </li>
+        <li>
           <a
             href="/visual-design/color.html"
             class="active landing"
