added some text to color's page #1392

--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -91,6 +91,10 @@ permalink: "visual-design/color.html"
     <div id="theme-palettes" class="mt-5"></div>
 
     <h3>Grayscale</h3>
+    <p>
+      We've added a grayscale palette that works well with all color themes.
+      This allows you to have more design flexibility.
+    </p>
     <div class="row">
       <div class="col-md-2">
         <div class="text-center p-t-3">
