made fixes to sample site pages side nav

--- a/pages/sample/newsroom-sampe-featured.html
+++ b/pages/sample/newsroom-sampe-featured.html
@@ -14,8 +14,8 @@ permalink: "/patterns/newsroom-featured-banner.html"
 
 <div class="row">
   <div class="col-lg-3">
-    <nav aria-label="list navigation">
-      <ul class="list-navigation">
+    <nav aria-label="list navigation" class="side-navigation">
+      <ul>
         <li><a href="javascript:;" class="landing active">Newsroom</a></li>
         <li><a href="javascript:;" aria-disabled="true">News articles</a></li>
         <li>
