--- a/pages/sample/side-navigation-sample.html
+++ b/pages/sample/side-navigation-sample.html
@@ -18,8 +18,8 @@ permalink: "/components/side-navigation-sample.html"
 
 <div class="row">
   <div class="col-lg-3">
-    <nav aria-label="list navigation">
-      <ul class="list-navigation">
+    <nav aria-label="list navigation" class="side-navigation">
+      <ul>
         <li>
           <a href="javascript:;" class="landing active">Types of parties</a>
         </li>
