--- a/pages/sample/article-sample.html
+++ b/pages/sample/article-sample.html
@@ -29,8 +29,8 @@ permalink: "/patterns/article-sample.html"
 </nav>
 <div class="row">
   <div class="col-lg-3">
-    <nav aria-label="list navigation">
-      <ul class="list-navigation">
+    <nav aria-label="list navigation" class="side-navigation">
+      <ul>
         <li>
           <a
             href="/patterns/list-of-articles-or-content-sample.html"
