--- a/pages/sample/list-of-articles-or-content-sample.html
+++ b/pages/sample/list-of-articles-or-content-sample.html
@@ -23,8 +23,8 @@ permalink: "/patterns/list-of-articles-or-content-sample.html"
 
 <div class="row">
   <div class="col-lg-3">
-    <nav aria-label="list navigation">
-      <ul class="list-navigation">
+    <nav aria-label="list navigation" class="side-navigation">
+      <ul>
         <li>
           <a href="/patterns/newsroom-sample.html" class="landing">Newsroom</a>
         </li>
