--- a/pages/sample/side-navigation-sample-level4.html
+++ b/pages/sample/side-navigation-sample-level4.html
@@ -39,8 +39,8 @@ permalink: "/components/side-navigation-sample-level4.html"
 
 <div class="row">
   <div class="col-lg-3">
-    <nav aria-label="list navigation">
-      <ul class="list-navigation">
+    <nav aria-label="list navigation" class="side-navigation">
+      <ul>
         <li>
           <a
             href="/components/side-navigation-sample-level3.html"
