Fix target link in condition of use

--- a/pages/conditions-of-use.html
+++ b/pages/conditions-of-use.html
@@ -195,7 +195,7 @@ permalink: "conditions-of-use.html"
   address issues you identify, to further improve our web site, or to forward
   the e-mail to another agency for appropriate action.
 </p>
-
+<p><a id="disclose"></a></p>
 <h3>Public disclosure</h3>
 <p>
   In the State of California, laws exist to ensure that government is open and
