small a11y fix in contqact us form

--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -90,8 +90,7 @@ permalink: "contact-us.html"
       <select
         class="form-select form-select-lg mb-3"
         id="InputRole"
-        name="Role"
-        role="listitem">
+        name="Role">
         <option value="">Select an option</option>
         <option value="Analytics">Analytics</option>
         <option value="Content">Content</option>
