setting the aria-labelledby to the correct target

--- a/pages/sample/css-classes-shortcuts.html
+++ b/pages/sample/css-classes-shortcuts.html
@@ -8,7 +8,9 @@ permalink: "get-started/css-classes-shortcuts/"
 <div class="row">
   <div class="col-lg-3" role="complementary">
     <!-- Side navigation -->
-    <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
+    <nav
+      aria-labelledby="page-navigation-label"
+      class="side-navigation sticky-6">
       <ul class="list-navigation">
         <li>
           <a
