--- a/pages/sample/card.html
+++ b/pages/sample/card.html
@@ -31,31 +31,22 @@ permalink: "patterns/card.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section1">Example</a>
+      <a href="#section1">Example <span class="sr-only">for default card</span></a>
     </li>
     <li>
-      <a href="#section2">Source code</a>
+      <a href="#section2">Source code <span class="sr-only">for default card</span></a>
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section1" class="tab-pane">
     <div class="card-header" id="heading-example1">
-      <a
-        data-bs-toggle="collapse"
-        href="#collapse-example1"
-        aria-expanded="true"
-        aria-controls="collapse-example1"
-        data-hash="#pane-example1"
-        title="Example tab header">
+      <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
+        data-hash="#pane-example1" title="Example tab header">
         Example
       </a>
     </div>
-    <div
-      id="collapse-example1"
-      class="collapse show p-0 m-0 brd-0"
-      role="tabpanel"
-      aria-labelledby="heading-example1">
+    <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
       <div class="p-a-sm">
         <div class="row">
           <div class="col-md-4 m-b-md">
@@ -69,25 +60,14 @@ permalink: "patterns/card.html"
   <!--HTML-->
   <section id="section2" class="tab-pane">
     <div class="card-header" id="heading-html1">
-      <a
-        class="collapsed"
-        data-bs-toggle="collapse"
-        href="#collapse-html1"
-        aria-expanded="false"
-        aria-controls="collapse-html1"
-        data-hash="#pane-html1"
-        title="HTML Source code tab header">
+      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
+        aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div
-      id="collapse-html1"
-      class="collapse p-0 m-0 brd-0"
-      role="tabpanel"
-      aria-labelledby="heading-html1">
+    <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
       <div class="p-a-sm">
-        <pre
-          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-default.html" %}</code></pre>
+        <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-default.html" %}</code></pre>
       </div>
     </div>
   </section>
@@ -105,31 +85,22 @@ permalink: "patterns/card.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section3">Example</a>
+      <a href="#section3">Example <span class="sr-only">for card with imagery</span></a>
     </li>
     <li>
-      <a href="#section4">Source code</a>
+      <a href="#section4">Source code <span class="sr-only">for card with imagery</span></a>
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section3" class="tab-pane">
     <div class="card-header" id="heading-example2">
-      <a
-        data-bs-toggle="collapse"
-        href="#collapse-example2"
-        aria-expanded="true"
-        aria-controls="collapse-example2"
-        data-hash="#pane-example1"
-        title="Example tab header">
+      <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
+        data-hash="#pane-example1" title="Example tab header">
         Example
       </a>
     </div>
-    <div
-      id="collapse-example2"
-      class="collapse show p-0 m-0 brd-0"
-      role="tabpanel"
-      aria-labelledby="heading-example2">
+    <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
       <div class="p-a-sm">
         <h3 class="m-t-0">Icon</h3>
         <div class="row">
@@ -150,29 +121,17 @@ permalink: "patterns/card.html"
   <!--HTML-->
   <section id="section4" class="tab-pane">
     <div class="card-header" id="heading-html2">
-      <a
-        class="collapsed"
-        data-bs-toggle="collapse"
-        href="#collapse-html2"
-        aria-expanded="false"
-        aria-controls="collapse-html2"
-        data-hash="#pane-html1"
-        title="HTML Source code tab header">
+      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
+        aria-controls="collapse-html2" data-hash="#pane-html1" title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div
-      id="collapse-html2"
-      class="collapse p-0 m-0 brd-0"
-      role="tabpanel"
-      aria-labelledby="heading-html2">
+    <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
       <div class="p-a-sm">
         <h3 class="m-t-0">Icon</h3>
-        <pre
-          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-icon.html" %}</code></pre>
+        <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-icon.html" %}</code></pre>
         <h3 class="m-t-2">Image</h3>
-        <pre
-          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-image.html" %}</code></pre>
+        <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-image.html" %}</code></pre>
       </div>
     </div>
   </section>
