add screen reader only text to the get started with eleventy card

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -29,7 +29,10 @@ permalink: "download-and-setup.html"
                 Implementation steps
               </a>
             </li>
-            <li><a href="/get-started/eleventy.html">Eleventy</a></li>
+            <li>
+              <a href="/get-started/eleventy.html">
+                <div class="sr-only">Get started with </div>Eleventy</a>
+            </li>
           </ul>
         </li>
         <li>
@@ -129,7 +132,7 @@ permalink: "download-and-setup.html"
             class="card-body brd-solid-1 brd-gray-200 h-100 d-flex flex-column">
             <h3 class="h4 m-y-sm">
               Sample template content
-              <br />
+              <br/>
               and files
             </h3>
             <p class="m-b">
