Update from div to span for sr-only block

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -15,7 +15,6 @@ permalink: "download-and-setup.html"
         <li>
           <a href="/get-started.html" class="landing">Get started</a>
         </li>
-
         <li>
           <a href="/whats-new.html">What's new in V6</a>
         </li>
@@ -31,7 +30,9 @@ permalink: "download-and-setup.html"
             </li>
             <li>
               <a href="/get-started/eleventy.html">
-                <div class="sr-only">Get started with </div>Eleventy</a>
+                <span class="sr-only"> Get started with </span>
+                Eleventy
+              </a>
             </li>
           </ul>
         </li>
@@ -132,7 +133,7 @@ permalink: "download-and-setup.html"
             class="card-body brd-solid-1 brd-gray-200 h-100 d-flex flex-column">
             <h3 class="h4 m-y-sm">
               Sample template content
-              <br/>
+              <br />
               and files
             </h3>
             <p class="m-b">
