--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -24,7 +24,9 @@ permalink: "/get-started/implementation-steps.html"
         </li>
         <li>
           <a href="/get-started/eleventy.html">
-            <div class="sr-only">Get started with </div>Eleventy</a>
+            <span class="sr-only">Get started with</span>
+            Eleventy
+          </a>
         </li>
       </ul>
     </nav>
@@ -38,7 +40,7 @@ permalink: "/get-started/implementation-steps.html"
     <ol class="cagov-step-list">
       <li>
         <span class="bold">Prepare for your upgrade</span>
-        <br/>
+        <br />
         <span class="cagov-step-list-content">
           <p>Before you start, save a copy of your current site.</p>
           <p>
@@ -51,7 +53,7 @@ permalink: "/get-started/implementation-steps.html"
 
       <li>
         <span class="bold">Review Template updates</span>
-        <br/>
+        <br />
         <span class="cagov-step-list-content">
           <p>
             To understand the changes in the code, perform a code comparison in
@@ -68,7 +70,7 @@ permalink: "/get-started/implementation-steps.html"
 
       <li>
         <span class="bold">Download the State Web Template from GitHub</span>
-        <br/>
+        <br />
         <span class="cagov-step-list-content">
           <p>Download the latest Template release for your framework:</p>
           <ul>
@@ -108,7 +110,7 @@ permalink: "/get-started/implementation-steps.html"
         <span class="bold">
           Look for CSS, JavaScript, and structural changes
         </span>
-        <br/>
+        <br />
         <span class="cagov-step-list-content">
           <p>Most changes are made in:</p>
           <ul>
@@ -133,7 +135,7 @@ permalink: "/get-started/implementation-steps.html"
         <span class="bold">
           Replace older library files with the updated ones
         </span>
-        <br/>
+        <br />
         <span class="cagov-step-list-content">
           <p>
             The Template has CSS and JavaScript (JS) code base. You will replace
@@ -154,7 +156,7 @@ permalink: "/get-started/implementation-steps.html"
         <span class="bold">
           Integrate the new template into your environment
         </span>
-        <br/>
+        <br />
         <span class="cagov-step-list-content">
           <p>
             From your code comparison, make the necessary changes and updates to
@@ -170,7 +172,7 @@ permalink: "/get-started/implementation-steps.html"
 
       <li>
         <span class="bold">Perform necessary tests and reviews</span>
-        <br/>
+        <br />
         <span class="cagov-step-list-content">
           <p>
             After core source code has been updated, you should thoroughly
@@ -184,7 +186,7 @@ permalink: "/get-started/implementation-steps.html"
 
       <li>
         <span class="bold">Release to production</span>
-        <br/>
+        <br />
         <span class="cagov-step-list-content">
           <p>
             You’re now ready to follow your organization's change management and
